Add note about the Build Dashboard being a good source of well-supported os/arch combos

--- a/1.3/cross/Dockerfile
+++ b/1.3/cross/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.3
 
 # see http://golang.org/doc/install/source#environment
+# see also http://build.golang.org/
 ENV GOLANG_CROSSPLATFORMS \
 	darwin/386 darwin/amd64 \
 	dragonfly/386 dragonfly/amd64 \
