Add a one-liner that provides a list of supported os/arch combos from within a Go source tree

--- a/1.2.2/cross/Dockerfile
+++ b/1.2.2/cross/Dockerfile
@@ -14,6 +14,8 @@ ENV GOLANG_CROSSPLATFORMS \
 	plan9/386 plan9/amd64 \
 	windows/386 windows/amd64
 
+# ls src/pkg/runtime/defs_*_*.h | sed -r 's!^.*/defs_([^_]+)_([^_]+)[.]h$!\1/\2!'
+
 # (set an explicit GOARM of 5 for maximum ARM compatibility)
 ENV GOARM 5
 
