--- a/1.3/Dockerfile
+++ b/1.3/Dockerfile
@@ -6,7 +6,9 @@ RUN apt-get update && apt-get install -y \
 		bzr git mercurial \
 		--no-install-recommends
 
-RUN curl -sSL http://golang.org/dl/go1.3.src.tar.gz \
+ENV GOLANG_VERSION 1.3.1
+
+RUN curl -sSL http://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
 	| tar -v -C /usr/src -xz
 WORKDIR /usr/src/go
 
