Slim down the build to just required items

--- a/1.2.1/Dockerfile
+++ b/1.2.1/Dockerfile
@@ -1,18 +1,18 @@
 FROM debian:wheezy
 
-# Go building deps and SCMs for "go get"
+# SCMs for "go get", gcc for cgo
 RUN apt-get update && apt-get install -y \
-		build-essential ca-certificates curl \
+		ca-certificates curl gcc libc6-dev \
 		bzr git mercurial \
-		--no-install-recommends
+		--no-install-recommends \
+	&& rm -rf /var/lib/apt/lists/*
 
 ENV GOLANG_VERSION 1.2.1
 
 RUN curl -sSL https://go.googlecode.com/files/go$GOLANG_VERSION.src.tar.gz \
-	| tar -v -C /usr/src -xz
-WORKDIR /usr/src/go
+		| tar -v -C /usr/src -xz
 
-RUN cd src && ./make.bash --no-clean 2>&1
+RUN cd /usr/src/go/src && ./make.bash --no-clean 2>&1
 
 ENV PATH /usr/src/go/bin:$PATH
 
