--- a/1.3/onbuild/Dockerfile
+++ b/1.3/onbuild/Dockerfile
@@ -4,8 +4,8 @@ RUN mkdir -p /go/src/app
 WORKDIR /go/src/app
 
 # this will ideally be built by the ONBUILD below ;)
-CMD ["/go/bin/app"]
+CMD ["go-wrapper", "run"]
 
 ONBUILD COPY . /go/src/app
-ONBUILD RUN go get -d -v ./...
-ONBUILD RUN go build -v ./...
+ONBUILD RUN go-wrapper download
+ONBUILD RUN go-wrapper install
