--- a/1.3/Dockerfile
+++ b/1.3/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
 
 ENV GOLANG_VERSION 1.3
 
-RUN curl -sSL http://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
+RUN curl -sSL https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz \
 		| tar -v -C /usr/src -xz
 
 RUN cd /usr/src/go/src && ./make.bash --no-clean 2>&1
