--- a/1.3/Dockerfile
+++ b/1.3/Dockerfile
@@ -2,8 +2,8 @@ FROM debian:wheezy
 
 # SCMs for "go get", gcc for cgo
 RUN apt-get update && apt-get install -y \
-		ca-certificates curl gcc libc6-dev \
-		bzr git mercurial make \
+		ca-certificates curl gcc libc6-dev make \
+		bzr git mercurial \
 		--no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
 
