--- a/1.4/cross/Dockerfile
+++ b/1.4/cross/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.4rc2
+FROM golang:1.4.0
 
 # see https://golang.org/doc/install/source#environment
 # see also http://build.golang.org/
