--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: bash
 services: docker
 
 env:
+  - VERSION=1.6 VARIANT=
+  - VERSION=1.6 VARIANT=wheezy
+  - VERSION=1.6 VARIANT=alpine
   - VERSION=1.5 VARIANT=
   - VERSION=1.5 VARIANT=wheezy
   - VERSION=1.5 VARIANT=alpine
