Update to Alpine 3.3 (especially for "--no-cache") and make use of that sweet "--virtual" feature of apk

--- a/1.4/alpine/Dockerfile
+++ b/1.4/alpine/Dockerfile
@@ -1,13 +1,16 @@
-FROM alpine:3.2
+FROM alpine:3.3
 
 ENV GOLANG_VERSION 1.4.3
 ENV GOLANG_SRC_URL https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz
 ENV GOLANG_SRC_SHA1 486db10dc571a55c8d795365070f66d343458c48
 
 RUN set -ex \
-	&& buildDeps='bash ca-certificates gcc musl-dev openssl' \
-	&& apk add --update $buildDeps \
-	&& rm -rf /var/cache/apk/* \
+	&& apk add --no-cache --virtual .build-deps \
+		bash \
+		ca-certificates \
+		gcc \
+		musl-dev \
+		openssl \
 	\
 	&& wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
 	&& echo "$GOLANG_SRC_SHA1  golang.tar.gz" | sha1sum -c - \
@@ -16,7 +19,7 @@ RUN set -ex \
 	&& cd /usr/local/go/src \
 	&& ./make.bash \
 	\
-	&& apk del $buildDeps
+	&& apk del .build-deps
 
 ENV GOPATH /go
 ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
