--- a/1.6/alpine/Dockerfile
+++ b/1.6/alpine/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:3.3
 
-ENV GOLANG_VERSION 1.6beta2
+ENV GOLANG_VERSION 1.6rc1
 ENV GOLANG_SRC_URL https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz
-ENV GOLANG_SRC_SHA256 8b23d15a3edf1d154ceea5e9ca6370fc60e7f57fb1c28aa8a44c40f8f3167c6d
+ENV GOLANG_SRC_SHA256 2d1a6756f24227dcee955add4af7d194eb4a8c3656b2c4ce778994e21a533a83
 
 ENV GOLANG_BOOTSTRAP_VERSION 1.4.3
 ENV GOLANG_BOOTSTRAP_URL https://golang.org/dl/go$GOLANG_BOOTSTRAP_VERSION.src.tar.gz
