--- a/1.6/alpine/Dockerfile
+++ b/1.6/alpine/Dockerfile
@@ -4,10 +4,6 @@ ENV GOLANG_VERSION 1.6.2
 ENV GOLANG_SRC_URL https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz
 ENV GOLANG_SRC_SHA256 787b0b750d037016a30c6ed05a8a70a91b2e9db4bd9b1a2453aa502a63f1bccc
 
-ENV GOLANG_BOOTSTRAP_VERSION 1.4.3
-ENV GOLANG_BOOTSTRAP_URL https://golang.org/dl/go$GOLANG_BOOTSTRAP_VERSION.src.tar.gz
-ENV GOLANG_BOOTSTRAP_SHA1 486db10dc571a55c8d795365070f66d343458c48
-
 # https://golang.org/issue/14851
 COPY no-pic.patch /
 
@@ -18,15 +14,9 @@ RUN set -ex \
 		gcc \
 		musl-dev \
 		openssl \
+		go \
 	\
-	&& mkdir -p /usr/local/bootstrap \
-	&& wget -q "$GOLANG_BOOTSTRAP_URL" -O golang.tar.gz \
-	&& echo "$GOLANG_BOOTSTRAP_SHA1  golang.tar.gz" | sha1sum -c - \
-	&& tar -C /usr/local/bootstrap -xzf golang.tar.gz \
-	&& rm golang.tar.gz \
-	&& cd /usr/local/bootstrap/go/src \
-	&& ./make.bash \
-	&& export GOROOT_BOOTSTRAP=/usr/local/bootstrap/go \
+	&& export GOROOT_BOOTSTRAP="$(go env GOROOT)" \
 	\
 	&& wget -q "$GOLANG_SRC_URL" -O golang.tar.gz \
 	&& echo "$GOLANG_SRC_SHA256  golang.tar.gz" | sha256sum -c - \
@@ -36,7 +26,7 @@ RUN set -ex \
 	&& patch -p2 -i /no-pic.patch \
 	&& ./make.bash \
 	\
-	&& rm -rf /usr/local/bootstrap /usr/local/go/pkg/bootstrap /*.patch \
+	&& rm -rf /*.patch \
 	&& apk del .build-deps
 
 ENV GOPATH /go
