--- a/1.7/alpine/Dockerfile
+++ b/1.7/alpine/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:3.4
 
+RUN apk add --no-cache ca-certificates
+
 ENV GOLANG_VERSION 1.7beta2
 ENV GOLANG_SRC_URL https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz
 ENV GOLANG_SRC_SHA256 88840e78905bdff7c8e408385182b4f77e8bdd062cac5c0c6382630588d426c7
@@ -10,7 +12,6 @@ COPY no-pic.patch /
 RUN set -ex \
 	&& apk add --no-cache --virtual .build-deps \
 		bash \
-		ca-certificates \
 		gcc \
 		musl-dev \
 		openssl \
