Backport of: https://go-review.googlesource.com/#/c/33106/

--- a/1.6/alpine/Dockerfile
+++ b/1.6/alpine/Dockerfile
@@ -8,6 +8,8 @@ ENV GOLANG_SRC_SHA256 6326aeed5f86cf18f16d6dc831405614f855e2d416a91fd3fdc334f772
 
 # https://golang.org/issue/14851
 COPY no-pic.patch /
+# https://golang.org/issue/17847
+COPY 17847.patch /
 
 RUN set -ex \
 	&& apk add --no-cache --virtual .build-deps \
@@ -25,6 +27,7 @@ RUN set -ex \
 	&& rm golang.tar.gz \
 	&& cd /usr/local/go/src \
 	&& patch -p2 -i /no-pic.patch \
+	&& patch -p2 -i /17847.patch \
 	&& ./make.bash \
 	\
 	&& rm -rf /*.patch \
