--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - VERSION=1.7 VARIANT=
   - VERSION=1.7 VARIANT=wheezy
   - VERSION=1.7 VARIANT=alpine
+  - VERSION=1.7 VARIANT=alpine3.5
   - VERSION=1.6 VARIANT=
   - VERSION=1.6 VARIANT=wheezy
   - VERSION=1.6 VARIANT=alpine
