--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: bash
 services: docker
 
 env:
-  - VERSION=1.8 VARIANT=
-  - VERSION=1.8 VARIANT=alpine
+  - VERSION=1.8-rc VARIANT=
+  - VERSION=1.8-rc VARIANT=alpine
   - VERSION=1.7 VARIANT=
   - VERSION=1.7 VARIANT=wheezy
   - VERSION=1.7 VARIANT=alpine
