--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services: docker
 
 env:
   - VERSION=1.8-rc VARIANT=
+  - VERSION=1.8-rc VARIANT=stretch
   - VERSION=1.8-rc VARIANT=alpine
   - VERSION=1.7 VARIANT=
   - VERSION=1.7 VARIANT=wheezy
