--- a/1.8/windows/nanoserver/Dockerfile
+++ b/1.8/windows/nanoserver/Dockerfile
@@ -16,9 +16,9 @@ RUN $newPath = ('{0}\bin;C:\go\bin;{1}' -f $env:GOPATH, $env:PATH); \
 	setx /M PATH $newPath;
 # doing this first to share cache across versions more aggressively
 
-ENV GOLANG_VERSION 1.8rc3
+ENV GOLANG_VERSION 1.8
 ENV GOLANG_DOWNLOAD_URL https://golang.org/dl/go$GOLANG_VERSION.windows-amd64.zip
-ENV GOLANG_DOWNLOAD_SHA256 9ac7224a79dfd2d390ff4c5202f09fae2a5b07e9b0ebf32913979635e7143383
+ENV GOLANG_DOWNLOAD_SHA256 cb27fe210f3a9d10329d48514895d2a1e3651125a7c3c758f0358a5bfc0e3060
 
 RUN Write-Host ('Downloading {0} ...' -f $env:GOLANG_DOWNLOAD_URL); \
 	Invoke-WebRequest -Uri $env:GOLANG_DOWNLOAD_URL -OutFile 'go.zip'; \
