--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,10 @@ image: Visual Studio 2017
 
 environment:
   matrix:
+    - version: 1.9-rc
+      variant: nanoserver
+    - version: 1.9-rc
+      variant: windowsservercore
     - version: 1.8
       variant: nanoserver
     - version: 1.8
