--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,17 @@ language: bash
 services: docker
 
 env:
-  - VERSION=1.9-rc VARIANT=
-  - VERSION=1.9-rc VARIANT=alpine
-  - VERSION=1.8 VARIANT=
+  - VERSION=1.9-rc VARIANT=stretch
+  - VERSION=1.9-rc VARIANT=alpine3.6
+  - VERSION=1.8 VARIANT=jessie
   - VERSION=1.8 VARIANT=stretch
-  - VERSION=1.8 VARIANT=alpine
   - VERSION=1.8 VARIANT=alpine3.6
-  - VERSION=1.7 VARIANT=
+  - VERSION=1.8 VARIANT=alpine3.5
   - VERSION=1.7 VARIANT=wheezy
-  - VERSION=1.7 VARIANT=alpine
+  - VERSION=1.7 VARIANT=jessie
   - VERSION=1.7 VARIANT=alpine3.6
   - VERSION=1.7 VARIANT=alpine3.5
+  - VERSION=1.7 VARIANT=alpine3.4
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
