--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
   - VERSION=1.8 VARIANT=stretch
   - VERSION=1.8 VARIANT=alpine3.6
   - VERSION=1.8 VARIANT=alpine3.5
+  - VERSION=1.10-rc VARIANT=stretch
+  - VERSION=1.10-rc VARIANT=alpine3.7
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
