--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -4,8 +4,7 @@ RUN apk add --no-cache ca-certificates
 
 ENV GOLANG_VERSION %%VERSION%%
 
-# https://golang.org/issue/14851 (Go 1.8 & 1.7)
-# https://golang.org/issue/17847 (Go 1.7)
+# no-pic.patch: https://golang.org/issue/14851 (Go 1.8 & 1.7)
 COPY *.patch /go-alpine-patches/
 
 RUN set -eux; \
