--- a/1.9/alpine3.7/Dockerfile
+++ b/1.9/alpine3.7/Dockerfile
@@ -4,7 +4,7 @@ RUN apk add --no-cache ca-certificates
 
 ENV GOLANG_VERSION 1.9.5
 
-# no-pic.patch: https://golang.org/issue/14851 (Go 1.8 & 1.7)
+# make-sure-R0-is-zero-before-main-on-ppc64le.patch: https://github.com/golang/go/commit/9aea0e89b6df032c29d0add8d69ba2c95f1106d9 (Go 1.9)
 COPY *.patch /go-alpine-patches/
 
 RUN set -eux; \
